# HyperShare

./: README.md
isomatrixpython/: CMakeLists.txt  README  README.md  isolation_matrix_python.py  test.py
isomatrixpython/include/: autoencoder.h  bit_vector_attribute.h  classdist.h  cpu_matrix.h  fast_matrix_forest.h  info_helper.h  lstm.h  matrix.h  mmatrix.h  numpy_interface.h  optimizers.h  python_interface.h  sampling_helper.h  utils.h
isomatrixpython/lib/: Setup.py
isomatrixpython/pred/: SA_predictions.csv  SF_predictions.csv  forestcover_predictions.csv  http_predictions.csv  shuttle_predictions.csv  smtp_predictions.csv
isomatrixpython/scripts/: benchmark_db_folder.py  benchmark_mnist.py  compare_hyperiso.py  draw_opt_vs_non.py  fetch_anomaly_datasets.py  gem_trans_simulation.py  isolation_matrix_python.py  plot_all_confusion_matrices.py  plot_clustering.py  plot_data_information.py  trans_simulation_fast.py
isomatrixpython/src/: isolation_matrix_python.cpp
isomatrixpython/tests/: game_of_life_test.h  isolation_matrix_python_test.cpp  run_tests.cpp  test1.h  test2.h
